<resources>
    <string name="app_name">Inventory App</string>

    <!--Content Description for ImageView in Activity_Catalog.xml -->
    <string name="image_view_content_description">Image of several surfboards lined up together.</string>

    <!-- Label for overflow menu option that inserts fake product data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all product data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Products</string>

    <!-- Title for the activity to add a new product [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_product">Add a New Product</string>

    <!--Title for the activity to edit an existing product-->
    <string name="editor_activity_title_edit_product">Edit Product</string>

    <!-- Label for editor menu option to save product and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current product [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!--Label for heading TextView -->
    <string name="enter_product">Enter Product Information</string>

    <!-- Labels for Activity_Catalog.xml, both TextView and EditView-->
    <string name="product_name">Product Name: </string>
    <string name="hint_product_name">edit product name</string>

    <string name="product_price">Price: </string>
    <string name="hint_product_price">edit price (currency is automated)</string>

    <string name="board_types">Board Types</string>
    <string name="board_length_not_specified">Not Specified</string>
    <string name="board_length_short">Short Board</string>
    <string name="board_length_long">Long Board</string>

    <string name="product_quantity">Quantity: </string>
    <string name="hint_product_quantity">edit quantity</string>

    <string name="supplier_name">Supplier Name: </string>
    <string name="hint_supplier_name">edit supplier name</string>

    <string name="supplier_contact_person">Contact Person: </string>
    <string name="hint_supplier_contact_person">edit contact person</string>

    <string name="supplier_phone_number">Phone#: </string>
    <string name="hint_supplier_phone_number">edit phone number</string>

    <!--Toast msg for Delete All Entries-->
    <string name="toast_error_saving">Error with saving product</string>
    <string name="toast_product_saved">Product saved with row id:</string>
    <string name="toast_field_empty">Please fill out all fields OR  Press back button.</string>
    <string name="dollar_sign">$</string>
    <string name="surfboard_table_contains">The surfboards table contains</string>
    <string name="surfboards_header">surfboards.</string>


    <!-- Title text for the empty view, which describes the empty stock room image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s empty looking, don\'t you think?...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a product [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a product</string>

    <string name="unknown_price">Price Not Specified</string>

    <string name="editor_insert_product_failed">Insert product failed.</string>

    <string name="editor_insert_product_successful">Insert product successful</string>

    <!--Toast Msgs for discarding changes-->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">Error with updating product</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="toast_out_of_stock">Out of Stock</string>


    <string name="current_stock">Current stock:</string>
    <string name="update_database_catalog_activity">Go to update the database</string>

    <!--Toast msg confirming reduction of current quantity-->
    <string name="quantity_reduced">Quantity reduced</string>

    <!--Toast msg to order more from supplier-->
    <string name="order_more_from_supplier">Let\'s order some more</string>
    <string name="toast_fill_all_fields">Please fill in all fields</string>
    <string name="toast_empty_fields_editor_activity">Saved.  But don\'t forget the empty fields.</string>
</resources>
