<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the editor -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <!--ImageView for the top of the Enter Product Page -->
        <ImageView
            android:id="@+id/activity_editor_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/array_of_boards"/>

        <!-- TextView for the Enter Product Page -->
        <TextView
            android:id="@+id/heading_enter_product"
            android:layout_below="@+id/activity_editor_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/enter_product"
            style="@style/CategoryStyle"
            />


    <!-- Product Name Label -->
    <TextView
        android:id="@+id/product_name_label"
        android:layout_below="@+id/heading_enter_product"
        android:text="@string/product_name"
        style="@style/CategoryStyle"/>


    <!-- Product Name (HINT) field -->
    <EditText
        android:id="@+id/edit_product_name"
        android:layout_below="@id/heading_enter_product"
        android:hint="@string/product_name"
        android:inputType="text"
        style="@style/EditorFieldStyle"/>


    <!-- Product Price Label -->
    <TextView
        android:id="@+id/product_price_tv"
        android:layout_below="@id/edit_product_name"
        android:text="@string/product_price"
        style="@style/CategoryStyle"/>


    <!-- Product Price (HINT) field -->
    <EditText
        android:id="@+id/edit_product_price"
        android:layout_below="@id/product_name_label"
        android:layout_toRightOf="@id/product_price_tv"
        android:hint="@string/hint_product_price"
        android:inputType="text"
        style="@style/EditorFieldStyle"/>



        <!--Board Type/Length Label -->
        <TextView
            android:text="@string/board_types"
            android:layout_below="@id/product_price_tv"
            style="@style/CategoryStyle" />


            <!-- Board Type/Length drop-down spinner -->


        <!-- *******************************WHAT IS THE FINAL LAYOUT HEIGHT YOU WANT TO USE?????????????????????????????????? -->
            <Spinner
                android:id="@+id/spinner_board_type"
                android:layout_below="@id/edit_product_price"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/seize_dp"
                android:spinnerMode="dropdown"/>


    <!-- Product Quantity Label -->
    <TextView
        android:id="@+id/quantity_field_text_view"
        android:text="@string/product_quantity"
        android:layout_below="@id/spinner_board_type"
        style="@style/CategoryStyle" />


    <!-- Product Quantity (HINT) field -->
    <EditText
        android:id="@+id/edit_quantity_field"
        android:hint="@string/product_quantity"
        android:inputType="text"
        style="@style/EditorFieldStyle" />


    <!-- Product Supplier Label -->
    <TextView
        android:id="@+id/supplier_field_text_view"
        android:text="@string/supplier_name"
        android:layout_below="@id/quantity_field_text_view"
        style="@style/CategoryStyle" />


    <!-- Product Supplier (HINT) field -->
    <EditText
        android:id="@+id/edit_supplier_name"
        android:hint="@string/supplier_name"
        android:inputType="text"
        style="@style/EditorFieldStyle" />


    <!-- Product Supplier Contact Person Label -->
    <TextView
        android:id="@+id/supplier_contact_text_view"
        android:text="@string/supplier_contact_person"
        android:layout_below="@id/supplier_field_text_view"
        style="@style/CategoryStyle" />


    <!-- Product Supplier Contact Person (HINT) field -->
    <EditText
        android:id="@+id/edit_supplier_contact_person"
        android:hint="@string/supplier_contact_person"
        android:inputType="text"
        style="@style/EditorFieldStyle" />


    <!-- Product Supplier Phone# Label -->
    <TextView
        android:id="@+id/supplier_phone_text_view"
        android:layout_below="@id/supplier_contact_text_view"
        android:text="@string/supplier_phone_number"
        style="@style/CategoryStyle" />


    <!-- Product Supplier Phone# (HINT) field -->
    <EditText
        android:id="@+id/edit_supplier_phone"
        android:hint="@string/supplier_phone_number"
        android:inputType="text"
        style="@style/EditorFieldStyle" />

    </RelativeLayout>

</ScrollView>

